crates/biome_cli/tests/snapshots/main_cases_included_files/does_handle_if_included_in_formatter.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: content
---
## `biome.json`

```json
{
  "files": { "ignore": ["test.js"] },
  "formatter": { "include": ["test.js"] }
}
```

## `test.js`

```js
statement();

```

# Emitted Messages

```block
Formatted 1 file(s) in <TIME>
```


