crates/biome_cli/tests/snapshots/main_cases_included_files/does_lint_included_files.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: content
---
## `biome.json`

```json
{
  "files": { "ignore": ["test.js"] },
  "linter": { "include": ["test.js"] }
}
```

## `test.js`

```js
(1 >= 0)
```

# Emitted Messages

```block
Fixed 1 file(s) in <TIME>
```


