crates/biome_cli/tests/snapshots/main_cases_included_files/does_not_handle_files_in_ignored_folder.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome format --write test.js folder/test2.js
```

## `biome.json`

```json
{
  "files": { "includes": ["**/*.js", "!**/folder"] }
}
```

## `folder/test2.js`

```js
  statement(  )  
```

## `test.js`

```js
statement();

```

# Emitted Messages

```block
Formatted 1 file in <TIME>. Fixed 1 file.
```
