crates/biome_cli/tests/snapshots/main_cases_included_files/does_not_handle_files_inside_force_ignored_folders.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome format --write a.js test/a.js
```

## `biome.json`

```json
{ "files": { "includes": ["*.js", "!!test"] } }
```

## `a.js`

```js
statement();

```

## `test/a.js`

```js
  statement(  )  
```

# Emitted Messages

```block
Formatted 1 file in <TIME>. Fixed 1 file.
```
