crates/biome_cli/tests/snapshots/main_cases_included_files/does_not_handle_included_files_if_overridden_by_ignore_formatter.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome format --write test.js test2.js
```

## `biome.json`

```json
{ "formatter": { "includes": ["test.js", "test2.js", "!test.js"] } }
```

## `test.js`

```js
  statement(  )  
```

## `test2.js`

```js
statement();

```

# Emitted Messages

```block
Formatted 1 file in <TIME>. Fixed 1 file.
```
